@@ -1,3 +1,8 @@
+2018-08-16  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* riscv-tdep.c (riscv_insn::decode): Decode c.addi4spn, c.sd,
+	c.sw, c.swsp, and c.sdsp.
+
 2018-08-15  Tom Tromey  <tom@tromey.com>
 
 	* aarch64-linux-tdep.c (aarch64_linux_core_read_vq): Use pulongest.
